# oc-pdf-filler

./: .gitignore  README.md  fields.json  pyproject.toml
skills/pdf-filler/: SKILL.md
skills/pdf-filler/assets/: values.example.json
skills/pdf-filler/references/: BACKENDS.md  FIELD_TYPES.md
skills/pdf-filler/scripts/: extract.py  fill.py  list_backends.py
src/oc_pdf_filler/: __init__.py  cli.py  extract.py  fill.py  models.py
src/oc_pdf_filler/backends/: __init__.py  base.py  pdfrw_backend.py  pdftk_backend.py  pymupdf_backend.py  pypdf_backend.py
tests/: test_extract.py  test_fill.py
